# openglbook-samples

./: CMakeLists.txt  CMakePresets.json
cmake/: utils.cmake
